--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,10 +2,12 @@ Package: PH1XBAR
 Type: Package
 Title: Phase I Shewhart X-bar Chart 
 Version: 0.1.0
-Authors@R: c(person("Yuhui", "Yao", role = c("aut", "cre"),
-                    email = "yyao17@crimson.ua.edu"))
+Authors@R: c(
+				person("Yuhui", "Yao", role = c("aut", "cre"), email = "yyao17@crimson.ua.edu"),
+				person('Subha', 'Chakraborti', role = c('ctb'), email = 'schakrab@cba.ua.edu')
+			)
 Maintainer: Yuhui Yao <yyao17@crimson.ua.edu>
-Author: Yuhui Yao [aut]
+%Author: Yuhui Yao [aut]
 Description: The utility of this package is in building a Shewhart-type Phase I control chart for the mean using the multivariate normal/t distribution.
 License: GPL-3
 Encoding: UTF-8
