--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,4 +5,4 @@ importFrom("stats", "integrate", "uniroot")
 importFrom("graphics", "axis", "plot", "points", "text")
 importFrom("stats", "var")
 
-export('PH1XBAR', 'PH1XBAR.data', 'PH1.get.cc', 'PH2.get.cc.uc', 'PH2.get.cc.EPC', 'PH2.get.ARLb.EPC', 'PH2.get.k.EPC', 'PH2XBAR', 'PH2XBAR.data')
+export('c4.f', 'PH1XBAR', 'PH1XBAR.data', 'PH1.get.cc', 'PH2.get.cc.uc', 'PH2.get.cc.EPC', 'PH2.get.ARLb.EPC', 'PH2.get.k.EPC', 'PH2XBAR', 'PH2XBAR.data')
